--- a/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
+++ b/Aier360/Controllers/校园/校园动态/SchoolInfo.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -663,6 +663,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="omK-9z-j9s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5121" y="1037"/>
+        </scene>
+        <!--School Profile View Controller-->
+        <scene sceneID="NHk-Zp-4jv">
+            <objects>
+                <viewController storyboardIdentifier="ZXSchoolProfileViewController" id="ivl-Q4-ki8" customClass="ZXSchoolProfileViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VUB-r7-xzQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="neX-hX-lzb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Tnk-Qg-ibY">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hk0-x5-OMP">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hk0-x5-OMP" firstAttribute="leading" secondItem="Tnk-Qg-ibY" secondAttribute="leading" id="1ZO-uh-8tA"/>
+                            <constraint firstAttribute="trailing" secondItem="hk0-x5-OMP" secondAttribute="trailing" id="4yp-Zh-KpZ"/>
+                            <constraint firstItem="neX-hX-lzb" firstAttribute="top" secondItem="hk0-x5-OMP" secondAttribute="bottom" id="Do5-yL-5qJ"/>
+                            <constraint firstItem="hk0-x5-OMP" firstAttribute="top" secondItem="VUB-r7-xzQ" secondAttribute="bottom" id="FW0-ER-o3D"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZWg-Ya-mo6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3178" y="-306"/>
         </scene>
         <!--Edit Summary View Controller-->
         <scene sceneID="czH-hB-YhQ">
