--- a/Aier360/Controllers/校园/敏感词/InfoObserver.storyboard
+++ b/Aier360/Controllers/校园/敏感词/InfoObserver.storyboard
@@ -159,6 +159,8 @@
                                                 <constraint firstAttribute="trailing" secondItem="tDE-nC-ntM" secondAttribute="trailing" constant="15" id="zX0-zT-tJh"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="tintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="classLabel" destination="zQb-AX-sEf" id="sPh-Iw-7fb"/>
                                             <outlet property="contentHeight" destination="i0a-19-j5v" id="JGg-au-Dmr"/>
