--- a/Aier360/Controllers/校园/敏感词/InfoObserver.storyboard
+++ b/Aier360/Controllers/校园/敏感词/InfoObserver.storyboard
@@ -201,5 +201,101 @@
             </objects>
             <point key="canvasLocation" x="680" y="521"/>
         </scene>
+        <!--Sensitive Words View Controller-->
+        <scene sceneID="n6h-e7-dlm">
+            <objects>
+                <viewController storyboardIdentifier="ZXSensitiveWordsViewController" id="3Y4-gT-t0s" customClass="ZXSensitiveWordsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uBW-LY-Gmy"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZaJ-3C-T0p"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="krb-6A-G3F">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MQA-uY-u1W">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="qwG-ja-c5N" style="IBUITableViewCellStyleDefault" id="YaL-9g-Or0">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YaL-9g-Or0" id="hXC-NH-7sN">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qwG-ja-c5N">
+                                                    <rect key="frame" x="15" y="0.0" width="570" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.37254901959999998" green="0.37254901959999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="3Y4-gT-t0s" id="ek4-In-vRi"/>
+                                    <outlet property="delegate" destination="3Y4-gT-t0s" id="Bvg-X7-r1g"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="17W-zC-JqF" customClass="UIButton">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dynamic_sens_add" translatesAutoresizingMaskIntoConstraints="NO" id="bT8-2F-0gH">
+                                        <rect key="frame" x="15" y="7" width="30" height="30"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="添加敏感词" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liE-bI-dkJ">
+                                        <rect key="frame" x="53" y="12" width="80" height="20"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <color key="textColor" red="0.37254901960784315" green="0.37254901960784315" blue="0.37254901960784315" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(例如体罚,收费)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="79q-by-bn8">
+                                        <rect key="frame" x="133" y="13" width="105" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" red="0.70196078429999997" green="0.69019607839999997" blue="0.6588235294" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="liE-bI-dkJ" firstAttribute="leading" secondItem="bT8-2F-0gH" secondAttribute="trailing" constant="8" id="EGb-Uv-OqX"/>
+                                    <constraint firstItem="liE-bI-dkJ" firstAttribute="centerY" secondItem="17W-zC-JqF" secondAttribute="centerY" id="IQF-dv-rFr"/>
+                                    <constraint firstAttribute="height" constant="44" id="K8d-vs-haE"/>
+                                    <constraint firstItem="79q-by-bn8" firstAttribute="leading" secondItem="liE-bI-dkJ" secondAttribute="trailing" id="Rxi-Py-k2b"/>
+                                    <constraint firstItem="bT8-2F-0gH" firstAttribute="centerY" secondItem="17W-zC-JqF" secondAttribute="centerY" id="UUn-9u-WWT"/>
+                                    <constraint firstItem="bT8-2F-0gH" firstAttribute="leading" secondItem="17W-zC-JqF" secondAttribute="leading" constant="15" id="ZXd-Tp-5Sv"/>
+                                    <constraint firstItem="79q-by-bn8" firstAttribute="centerY" secondItem="17W-zC-JqF" secondAttribute="centerY" id="hGO-pY-DdB"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="addWord:" destination="3Y4-gT-t0s" eventType="touchUpInside" id="AR8-R3-2h1"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="MQA-uY-u1W" firstAttribute="leading" secondItem="krb-6A-G3F" secondAttribute="leading" id="4QT-gH-sGt"/>
+                            <constraint firstAttribute="trailing" secondItem="17W-zC-JqF" secondAttribute="trailing" id="9FV-CP-uaj"/>
+                            <constraint firstItem="ZaJ-3C-T0p" firstAttribute="top" secondItem="MQA-uY-u1W" secondAttribute="bottom" id="JKg-ac-Fxe"/>
+                            <constraint firstItem="MQA-uY-u1W" firstAttribute="top" secondItem="17W-zC-JqF" secondAttribute="bottom" id="Kcs-mL-NRd"/>
+                            <constraint firstItem="17W-zC-JqF" firstAttribute="top" secondItem="uBW-LY-Gmy" secondAttribute="bottom" id="TVC-7x-Udd"/>
+                            <constraint firstAttribute="trailing" secondItem="MQA-uY-u1W" secondAttribute="trailing" id="Uat-Uj-29Z"/>
+                            <constraint firstItem="17W-zC-JqF" firstAttribute="leading" secondItem="krb-6A-G3F" secondAttribute="leading" id="zeZ-wp-adg"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="MQA-uY-u1W" id="efF-Fv-1vt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I8g-79-LtS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1343" y="526"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="dynamic_sens_add" width="30" height="30"/>
+    </resources>
 </document>
