--- a/Aier360/Controllers/校园/ZXSchoolMenuHeader.xib
+++ b/Aier360/Controllers/校园/ZXSchoolMenuHeader.xib
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="82X-Su-5hw" customClass="ZXSchoolMenuHeader">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="320"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="377"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="dSd-oI-Yma">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="95"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="152"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="95" id="t5l-VS-oDu"/>
+                        <constraint firstAttribute="width" secondItem="dSd-oI-Yma" secondAttribute="height" multiplier="75:19" id="ZEB-uQ-aLT"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j3G-0m-hIh">
-                    <rect key="frame" x="15" y="63" width="44" height="22"/>
+                    <rect key="frame" x="15" y="120" width="44" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
@@ -26,7 +27,7 @@
                     <size key="shadowOffset" width="2" height="-1"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NbQ-h0-jLi">
-                    <rect key="frame" x="521" y="62" width="64" height="23"/>
+                    <rect key="frame" x="521" y="119" width="64" height="23"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <inset key="titleEdgeInsets" minX="2" minY="0.0" maxX="0.0" maxY="0.0"/>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2" maxY="0.0"/>
@@ -39,7 +40,7 @@
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bVi-io-M99">
-                    <rect key="frame" x="0.0" y="100" width="600" height="100"/>
+                    <rect key="frame" x="0.0" y="157" width="600" height="100"/>
                     <color key="backgroundColor" red="1" green="0.98823529409999999" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="UNj-5t-JY3"/>
@@ -57,7 +58,7 @@
                     </connections>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AyL-5b-16X">
-                    <rect key="frame" x="0.0" y="210" width="600" height="40"/>
+                    <rect key="frame" x="0.0" y="267" width="600" height="40"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="班级动态" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i0H-7T-ob3">
                             <rect key="frame" x="15" y="10" width="64" height="20"/>
@@ -86,7 +87,7 @@
                     </constraints>
                 </view>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWK-xZ-W8Y" customClass="UIButton">
-                    <rect key="frame" x="0.0" y="250" width="600" height="70"/>
+                    <rect key="frame" x="0.0" y="307" width="600" height="70"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="classdynamic_bt_release" translatesAutoresizingMaskIntoConstraints="NO" id="n8R-EF-VMS">
                             <rect key="frame" x="244" y="21" width="36" height="28"/>
